log/build_2022-03-31_22-06-13/smooth_drive/stdout_stderr.log
running egg_info
writing ../../build/smooth_drive/smooth_drive.egg-info/PKG-INFO
writing dependency_links to ../../build/smooth_drive/smooth_drive.egg-info/dependency_links.txt
writing entry points to ../../build/smooth_drive/smooth_drive.egg-info/entry_points.txt
writing requirements to ../../build/smooth_drive/smooth_drive.egg-info/requires.txt
writing top-level names to ../../build/smooth_drive/smooth_drive.egg-info/top_level.txt
reading manifest file '../../build/smooth_drive/smooth_drive.egg-info/SOURCES.txt'
writing manifest file '../../build/smooth_drive/smooth_drive.egg-info/SOURCES.txt'
running build
running build_py
copying smooth_drive/pid_control.py -> /home/ubuntu/ros2_ws/build/smooth_drive/build/lib/smooth_drive
running install
running install_lib
copying /home/ubuntu/ros2_ws/build/smooth_drive/build/lib/smooth_drive/pid_control.py -> /home/ubuntu/ros2_ws/install/smooth_drive/lib/python3.8/site-packages/smooth_drive
byte-compiling /home/ubuntu/ros2_ws/install/smooth_drive/lib/python3.8/site-packages/smooth_drive/pid_control.py to pid_control.cpython-38.pyc
  File "/home/ubuntu/ros2_ws/install/smooth_drive/lib/python3.8/site-packages/smooth_drive/pid_control.py", line 80
    self.errorR_prev = right_error
    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ubuntu/ros2_ws/install/smooth_drive/lib/python3.8/site-packages/smooth_drive-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/smooth_drive/smooth_drive.egg-info to /home/ubuntu/ros2_ws/install/smooth_drive/lib/python3.8/site-packages/smooth_drive-0.0.0-py3.8.egg-info
running install_scripts
Installing smooth_drive script to /home/ubuntu/ros2_ws/install/smooth_drive/lib/smooth_drive
writing list of installed files to '/home/ubuntu/ros2_ws/build/smooth_drive/install.log'
